# Inertia

./: CMakeLists.txt  README.md  images.qrc  main.cpp
games-data/: games-data-pathes.txt  games-data-paths.txt
ui/: Ball.qml  ClearCell.qml  ExplodedCell.qml  GemCell.qml  HintArrow.qml  Main.qml  MinedCell.qml  StopCell.qml  WallCell.qml
ui/js/: mainOperations.js
